reports/svm.log
Traceback (most recent call last):
  File "/home/runner/work/ids-s22/ids-s22/env/lib/python3.9/site-packages/jupyter_cache/executors/utils.py", line 51, in single_nb_execution
    executenb(
  File "/home/runner/work/ids-s22/ids-s22/env/lib/python3.9/site-packages/nbclient/client.py", line 1085, in execute
    return NotebookClient(nb=nb, resources=resources, km=km, **kwargs).execute()
  File "/home/runner/work/ids-s22/ids-s22/env/lib/python3.9/site-packages/nbclient/util.py", line 84, in wrapped
    return just_run(coro(*args, **kwargs))
  File "/home/runner/work/ids-s22/ids-s22/env/lib/python3.9/site-packages/nbclient/util.py", line 62, in just_run
    return loop.run_until_complete(coro)
  File "/opt/hostedtoolcache/Python/3.9.10/x64/lib/python3.9/asyncio/base_events.py", line 642, in run_until_complete
    return future.result()
  File "/home/runner/work/ids-s22/ids-s22/env/lib/python3.9/site-packages/nbclient/client.py", line 551, in async_execute
    await self.async_execute_cell(
  File "/home/runner/work/ids-s22/ids-s22/env/lib/python3.9/site-packages/nbclient/client.py", line 846, in async_execute_cell
    self._check_raise_for_error(cell, exec_reply)
  File "/home/runner/work/ids-s22/ids-s22/env/lib/python3.9/site-packages/nbclient/client.py", line 748, in _check_raise_for_error
    raise CellExecutionError.from_cell_and_msg(cell, exec_reply_content)
nbclient.exceptions.CellExecutionError: An error occurred while executing the following cell:
------------------
>>>#import the package

>>>from sklearn import svm

>>>#set up some data points
>>>x = [[0,0], [1,1]]
>>>y = [0,1]
>>>clf = svm.SVC()

>>>#fit the model

>>>clf.fit(x,y)
SVC()
>>>#now predict on some new values

>>>clf.predict([[2., 2.]])
array([1])
------------------

[0;36m  File [0;32m"/tmp/ipykernel_3307/2650415489.py"[0;36m, line [0;32m1[0m
[0;31m    >>>#import the package[0m
[0m    ^[0m
[0;31mSyntaxError[0m[0;31m:[0m invalid syntax

SyntaxError: invalid syntax (2650415489.py, line 1)

